basic advanced Weekend mission displaying

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -210,7 +210,7 @@ $list-item-text-color-darker: #c5c5c5;
 
     .discussion {
         >.bubble.sender {
-            background-color: #0e0e0e;
+            background-color: #606060;
             color: #fff;
         }
 
