finish revamp weekend mission

--- a/src/components/tilePresenter/chatBubble/_chatBubble.scss
+++ b/src/components/tilePresenter/chatBubble/_chatBubble.scss
@@ -12,6 +12,7 @@
         font-size: 1.25em;
 
         &.sender {
+            text-align: left;
             align-self: flex-start;
             background-color: cornflowerblue;
             color: #fff;
