--- a/src/pages/helloGames/weekendMission/weekendMissionMenu.scss
+++ b/src/pages/helloGames/weekendMission/weekendMissionMenu.scss
@@ -6,6 +6,10 @@
     min-height: 20em;
     text-align: right;
 
+    p {
+        color: rgb(177, 177, 177);
+    }
+
     .bottom-text {
         position: absolute;
         left: 0;
