make segmented control look better

--- a/src/scss/custom/_segmentedControl.scss
+++ b/src/scss/custom/_segmentedControl.scss
@@ -5,6 +5,8 @@
     label {
         color: $brand-secondary;
         border: 1px solid currentColor;
+        border-top-width: 0px;
+        border-bottom-width: 0px;
         font-size: 1.25em;
         margin: 0;
         padding: 0;
