--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -117,12 +117,15 @@
                         padding: 0;
                         margin: 0;
 
+                        display: flex;
+                        align-items: center;
+
                         // padding-left: 0;
                         // padding-right: 1em;
                         // margin-top: 1rem;
 
                         >* {
-                            margin-top: .25em;
+                            // margin-top: .25em;
                             margin-right: .5em;
                             display: block;
                             color: white;
