--- a/src/components/common/button/positiveButton.scss
+++ b/src/components/common/button/positiveButton.scss
@@ -1,19 +1,24 @@
 .customButton {
     display: inline-block;
+    position: relative;
     border-radius: 5px;
     padding: .75em;
     cursor: pointer;
 
     i {
         position: absolute;
-        top: 1.21em;
-    }
-
-    i+span {
-        padding-left: 2em;
+        top: 0.5em;
     }
 
     &.full {
         width: 100%;
+    }
+
+    &.left {
+        float: left;
+    }
+
+    &.right {
+        float: right;
     }
 }
