--- a/src/pages/misc/nmsfmPresenter.scss
+++ b/src/pages/misc/nmsfmPresenter.scss
@@ -16,3 +16,14 @@
         right: 1em;
     }
 }
+
+.view-queue {
+    position: absolute;
+    top: 0;
+    right: 0.5rem;
+
+    .action-icon {
+        display: block;
+        font-size: 3em;
+    }
+}
