--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3,6 +3,7 @@
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/portal";
+@import "./custom/ribbon";
 @import "./custom/general";
 @import "./custom/scrollbar";
 @import "./custom/sidebar";
