finished what is new

--- a/src/scss/custom/_darkTheme.scss
+++ b/src/scss/custom/_darkTheme.scss
@@ -224,4 +224,10 @@ $list-item-text-color-darker: #c5c5c5;
 
         }
     }
+
+    .react-modal-sheet-content {
+        a {
+            color: $brand-secondary-dark;
+        }
+    }
 }
