--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -9,5 +9,4 @@
 @import "./custom/sidebar";
 @import "./custom/searchBar";
 
-@import "./custom/lightTheme";
-@import "./custom/darkTheme";
+@import "./custom/theme";
