--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -3,8 +3,7 @@ $list-item-background-color-dark: #6c757d;
 $list-item-text-color-dark: #f8f9fa;
 $list-item-text-color-darker: #c5c5c5;
 
-#app.isDark,
-.isDark {
+#app {
 
     color: $body-color-dark;
     background-color: $brand-primary-background-dark;
