--- a/src/scss/custom/_sidebar.scss
+++ b/src/scss/custom/_sidebar.scss
@@ -15,9 +15,9 @@
 
 .action-icon,
 .nav .nav-item .material-icons {
-    color: $brand-secondary-dark;
+    color: $brand-secondary;
 }
 
 .nav .nav-item.active>.nav-link .material-icons {
-    color: $brand-secondary-dark;
+    color: $brand-secondary;
 }
