--- a/src/scss/material-dashboard/_misc.scss
+++ b/src/scss/material-dashboard/_misc.scss
@@ -1,38 +1,41 @@
-body{
-    background-color: #eee;
-    color: $black-color;
-    font-weight: 300;
+body {
+  background-color: #eee;
+  font-weight: 300;
 }
 
 legend {
   border-bottom: 0;
 }
 
-.serif-font{
-    font-family: $font-family-serif;
+.serif-font {
+  font-family: $font-family-serif;
 }
 
 // Prevent highlight on mobile
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
+
   &:focus {
     outline: 0;
   }
 }
 
-a{
+a {
   color: $link-color;
+
   &:hover,
-  &:focus{
-      color: darken($link-color, 5%);
-      text-decoration: none;
+  &:focus {
+    color: darken($link-color, 5%);
+    text-decoration: none;
   }
 
-  &.text-info{
-      &:hover, &:focus{
-          color: darken($brand-info, 5%);
-      }
+  &.text-info {
+
+    &:hover,
+    &:focus {
+      color: darken($brand-info, 5%);
+    }
   }
 
   & .material-icons {
@@ -41,42 +44,43 @@ a{
 }
 
 .form-check,
-label{
-    font-size: 14px;
-    line-height: 1.42857;
-    color: $checkboxes-text-color;
-    font-weight: 400;
+label {
+  font-size: 14px;
+  line-height: 1.42857;
+  color: $checkboxes-text-color;
+  font-weight: 400;
 }
 
 /*           Animations              */
-.animation-transition-general{
-    @include transition-all($general-transition-time, $transition-linear);
+.animation-transition-general {
+  @include transition-all($general-transition-time, $transition-linear);
 }
 
-.animation-transition-slow{
-    @include transition-all($slow-transition-time, $transition-linear);
+.animation-transition-slow {
+  @include transition-all($slow-transition-time, $transition-linear);
 }
 
-.animation-transition-fast{
-    @include transition-all($fast-transition-time, $transition-ease);
+.animation-transition-fast {
+  @include transition-all($fast-transition-time, $transition-ease);
 }
 
 .caret,
-.sidebar a{
-    @include transition-all($fast-transition-time, $transition-ease-in);
+.sidebar a {
+  @include transition-all($fast-transition-time, $transition-ease-in);
 }
 
 
 // Offline documentation
 
 .offline-doc {
-  .navbar.navbar-transparent{
+  .navbar.navbar-transparent {
     padding-top: 25px;
     border-bottom: none;
 
     .navbar-minimize {
       display: none;
     }
+
     .navbar-brand,
     .collapse .navbar-nav .nav-link {
       color: $white-color !important;
@@ -91,7 +95,8 @@ label{
     bottom: 0;
     color: $white-color;
   }
-  .page-header{
+
+  .page-header {
     display: flex;
     align-items: center;
 
@@ -119,24 +124,24 @@ label{
 
 // docs
 
- .bd-docs {
-   .bd-toc-item {
-     .bd-sidenav a span {
-       float: right;
-       margin-top: 5px;
-       padding: 3px 7px;
-       font-size: 8px;
-       line-height: 9px;
-       background-color: $brand-primary;
-     }
-   }
- }
+.bd-docs {
+  .bd-toc-item {
+    .bd-sidenav a span {
+      float: right;
+      margin-top: 5px;
+      padding: 3px 7px;
+      font-size: 8px;
+      line-height: 9px;
+      background-color: $brand-primary;
+    }
+  }
+}
 
 
 // timepicker increase/decrease buttons
 
 .bootstrap-datetimepicker-widget .timepicker {
-  .table-condesed .btn{
+  .table-condesed .btn {
     .ripple-container {
       width: 40px;
       height: 40px;
