fix guide text opacity

--- a/src/scss/custom/_guide.scss
+++ b/src/scss/custom/_guide.scss
@@ -2,6 +2,7 @@
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
     .section {
+        color: white;
 
         .item,
         .link,
