--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -92,6 +92,11 @@ img.grayscale {
     >.content {
         margin-top: 0;
         padding: 0 15px;
+
+        &.no-spacing {
+            margin: 0;
+            padding: 0;
+        }
     }
 }
 
