--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -8,5 +8,6 @@
 @import "./custom/scrollbar";
 @import "./custom/sidebar";
 @import "./custom/searchBar";
+@import "./custom/shareButton";
 
 @import "./custom/theme";
