--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -100,6 +100,10 @@ body {
 
         .quantity-container {
             color: darken($list-item-text-color-dark, 20%);
+
+            .item-name {
+                color: $brand-secondary;
+            }
         }
 
         .badge-container {
