--- a/src/scss/custom/_scrollbar.scss
+++ b/src/scss/custom/_scrollbar.scss
@@ -14,7 +14,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: $brand-primary;
+    background-color: darken($brand-primary, 25%);
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%,
             transparent 25%,
             transparent 50%,
