--- a/src/scss/custom/_shareButton.scss
+++ b/src/scss/custom/_shareButton.scss
@@ -65,7 +65,7 @@
     box-shadow: 0 4px 0 #2d4370;
 }
 
-.google {
-    background: #CC3732;
-    box-shadow: 0 4px 0 #9c2a26;
+.whatsapp {
+    background: #25D366;
+    box-shadow: 0 4px 0 #128C7E;
 }
