--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -23,6 +23,10 @@ $grip-col-min-max: minmax(50px, 200px);
     .catalogue-item {
         border-radius: 10px;
         min-height: 100px;
+
+        img.custom-icons {
+            min-height: 75px;
+        }
     }
 }
 
