--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -198,9 +198,19 @@ img.grayscale {
     cursor: pointer;
 }
 
+.fab-container {
+    position: absolute;
+    top: 0;
+    right: 4em;
+}
+
 .store {
     padding-left: .5em;
     padding-right: .5em;
+}
+
+.pos-rel {
+    position: relative;
 }
 
 .noselect {
