--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -165,6 +165,11 @@ body {
         background-color: $brand-primary;
     }
 
+    .navbar-nav .fab-bg-color,
+    .fab-container .fab-bg-color {
+        background-color: $brand-secondary;
+    }
+
     .button-active-bg {
         background-color: $brand-secondary;
     }
