regen seo pages

--- a/webpack/handlebar/itemDetailPage.hbs
+++ b/webpack/handlebar/itemDetailPage.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Assistant for No Man's Sky</title>
+    <title>{{data.Name}} - Assistant for No Man's Sky</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -13,16 +13,14 @@
     <link rel="preload" href="/assets/images/loader.svg" as="image">
 
     <link type="text/plain" rel="author" href="/humans.txt" />
-    <meta name="application-name" content="Assistant for No Man&#39;s Sky">
+    <meta name="application-name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="theme-color" content="#3F51B5">
-    <meta name="description"
-        content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
+    <meta name="description" content="{{data.Description}}">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta name="google" content="nositelinkssearchbox">
     <meta name="generator" content="program">
-    <meta name="subject"
-        content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
+    <meta name="subject" content="{{data.Description}}">
     <meta name="rating" content="General">
     <meta name="referrer" content="no-referrer">
     <meta http-equiv="x-dns-prefetch-control" content="off">
@@ -33,36 +31,33 @@
     <link rel="index" href="https://nmsassistant.com/">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Assistant for No Man&#39;s Sky">
-    <meta itemprop="description"
-        content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
-    <meta itemprop="image" content="https://nmsassistant.com/favicon.ico">
+    <meta itemprop="name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta itemprop="description" content="{{data.Description}}">
+    <meta itemprop="image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://nmsassistant.com">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Assistant for No Man&#39;s Sky">
+    <meta property="og:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta property="og:locale" content="en_US">
-    <meta property="og:description"
-        content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
-    <meta property="og:site_name" content="Assistant for No Man&#39;s Sky">
-    <meta property="og:image" content="https://nmsassistant.com/favicon.ico">
+    <meta property="og:description" content="{{data.Description}}">
+    <meta property="og:site_name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta property="og:image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:site" content="@AssistantNMS">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Assistant for No Man&#39;s Sky">
-    <meta name="twitter:description"
-        content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
-    <meta name="twitter:image" content="https://nmsassistant.com/favicon.ico">
+    <meta name="twitter:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
+    <meta name="twitter:description" content="{{data.Description}}">
+    <meta name="twitter:image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
     <!-- Meta Tags Generated via http://heymeta.com -->
 
     <!-- Apple Meta Tags -->
     <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3F51B5">
     <meta name="apple-itunes-app" content="app-id=id1480287625,app-argument=assistantNMSWeb">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://nmsassistant.com/assets/images/{{data.Icon}}">
     <!-- <link rel="apple-touch-startup-image" href="/path/to/launch.png"> -->
-    <meta name="apple-mobile-web-app-title" content="Assistant for No Man&#39;s Sky">
+    <meta name="apple-mobile-web-app-title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="alternate" href="ios-app://id1480287625/assistantNMSWeb">
